Nav menu z-index fix

--- a/src/components/oilersTimes/oilersTimes.css
+++ b/src/components/oilersTimes/oilersTimes.css
@@ -64,7 +64,7 @@
   padding: 1rem;
   margin-top: 2rem;
   transition: all 0.1s linear;
-  z-index: 100;
+  z-index: 99;
 }
 
 .article-button:hover {
