--- a/src/mediaQueries.css
+++ b/src/mediaQueries.css
@@ -115,6 +115,7 @@
   }
   .open-menu {
     backdrop-filter: blur(10px);
+    z-index: 100;
     /* height: 100vh;
     width: 100vw; */
   }
@@ -128,7 +129,7 @@
     width: 4rem;
     margin-top: 2rem;
     align-self: flex-start;
-    z-index: 1;
+    z-index: 102;
   }
   .disabled-homepage-links {
     display: none;
